devops/user-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: user-service
