devops/user-service/templates/ingress-user-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
