devops/user-service/templates/ingress.yaml
---
# Middleware
# Strip prefix /user-service
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-admin
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /user-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service
  annotations:
#    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-mw-admin@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
